[package]
name = "deet"
authors = ["Ryan Eberhardt <reberhardt7@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.30.1", features = ["ptrace"] }
libc = "0.2.174"
rustyline = "17.0.0"
gimli = { git = "https://github.com/gimli-rs/gimli", rev = "ad23cdb2", default-features = false, features = ["read"] }
object = { version = "0.36", default-features = false, features = ["read"] }
memmap2 = "0.9"
addr2line = "0.24.2"
